//Hello bello teszt

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="20">
     <tr>
       <td> <img src=1517405311482.jfif alt="Gruber_Tamás"></td>
-      <td> <h1>Gruber Tamás</h1>
+      <td> <h1>Gruber Tamás _ Teszt2024</h1>
         <p><em>Üzleti tanácsadó @<strong><a href="https://www.teqtos.com">Teqtos Kft.</a></strong></em></p>
         <p>Folyamatmenedzsment, projektmenedzsment tanácsadás</p></td>
     </tr>
